--- a/Arquivos/style/style.css
+++ b/Arquivos/style/style.css
@@ -6,6 +6,14 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.tapar{
+    position:fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    z-index: 23333;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -109,7 +117,7 @@ header nav.menu-desktop ul li {
     height: 100vh;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: 99999;
     width: 0%;
     overflow: hidden;
@@ -117,7 +125,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile.abrir-menu{
-    width: 90%;
+    width: 70%;
 }
 
 .menu-mobile.abrir-menu ~ .overlay-menu{
@@ -205,12 +213,13 @@ section.topo-do-site .flex {
     }
 }
 
-.topo-do-site .img-topo-site {
+ .img-topo-site {
     display: flex;
     justify-content: end;
     border-radius: 50px;
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
+    background-color:black;
 }
 
 @keyframes flutuar {
@@ -225,7 +234,7 @@ section.topo-do-site .flex {
 
 /* ESTILO DAS ESPECIALIDADES */
 section.especiliadades {
-    padding: 200px 4%;
+    padding: 100px 4%;
 }
 
 section.especiliadades .flex {
