--- a/Arquivos/style/style.css
+++ b/Arquivos/style/style.css
@@ -5,14 +5,14 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
+/* 
 .tapar{
     position:fixed;
     width: 100vw;
     height: 100vh;
     background-color: #000;
     z-index: 23333;
-}
+} */
 
 html{
     scroll-behavior: smooth;
