--- a/Arquivos/style/style.css
+++ b/Arquivos/style/style.css
@@ -14,6 +14,14 @@
     z-index: 23333;
 } */
 
+/* section {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 html{
     scroll-behavior: smooth;
 }
@@ -76,7 +84,7 @@ header {
     border-radius: 10px;
     z-index: 2;
     width: 100%;
-    background-color: #3333336a;
+    background-color: #00000048;
 }
 
 header>.interface {
@@ -86,7 +94,7 @@ header>.interface {
 }
 
 header a {
-    color: #9a9a9a;
+    color: #656565;
     text-decoration: none;
     display: inline-block;
     transition: .2s;
@@ -125,7 +133,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile.abrir-menu{
-    width: 70%;
+    width: 80%;
 }
 
 .menu-mobile.abrir-menu ~ .overlay-menu{
@@ -150,8 +158,8 @@ header nav.menu-desktop ul li {
 }   
 
 .menu-mobile nav ul li a:hover{
-    background: linear-gradient(#fcb045,
-        #7f4c01);
+    background: linear-gradient(#fffaf3,
+        #4c4c4c);
     color: #000;
 }
 
@@ -168,8 +176,7 @@ header nav.menu-desktop ul li {
 
 /* ESTILO DO TOPO DO SITE */
 section.topo-do-site {
-    padding: 40px 4%;
-    background-image: url(../img/star\ sky.gif);
+    padding: 80px 40px 0px 80px;
 }
 
 section.topo-do-site .flex {
@@ -178,25 +185,39 @@ section.topo-do-site .flex {
     gap: 90px;
 }
 
+section.topo-do-site{
+    position: relative;
+    animation: flutuar 2.5s ease-in-out infinite alternate;
+}
+
+@keyframes flutuar {
+    0% {
+        top: 0;
+    }
+
+    100% {
+        top: 2px;
+    }
+}
+
 .topo-do-site h1 {
-    color: #fff;
+    color:black;
     font-size: 42px;
     line-height: 40px;
 }
 
 .topo-do-site .txt-topo-site h1 span {
-    color: #fcb045;
+    color: #1472d7;
 }
 
 .topo-do-site .txt-topo-site p {
-    color: #fff;
+    color: black;
     margin: 40px 0;
 }
 
 .animation{
     background: linear-gradient(
-        to right, #fcb045, #543ab4,
-         #fd371d);
+        to right, #ababab, #fbfbfb, #282828);
          background-size: 400% 400%;
          animation: animate-background 10s infinite ease-in-out;
 }
@@ -214,27 +235,27 @@ section.topo-do-site .flex {
 }
 
  .img-topo-site {
-    display: flex;
-    justify-content: end;
-    border-radius: 50px;
-    position: relative;
-    animation: flutuar 2s ease-in-out infinite alternate;
-    background-color:black;
+    background-image: url(../img/foto\ sem\ fundo.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 65%;
+    height: 75vh;
+    padding: 50px;
+    border-bottom: solid 0.5px black;
 }
 
-@keyframes flutuar {
-    0% {
-        top: 0;
-    }
-
-    100% {
-        top: 35px;
-    }
-}
 
 /* ESTILO DAS ESPECIALIDADES */
 section.especiliadades {
-    padding: 100px 4%;
+    padding: 120px 50px 120px 50px;
+    
+
+    h2{
+        background-color: #00000086;
+        padding: 5px;
+        border-radius: 20px;
+    }
 }
 
 section.especiliadades .flex {
@@ -246,17 +267,13 @@ section.especiliadades .flex {
     padding: 40px;
     border-radius: 20px;
     margin-top: 45px;
-    transition: .2s;
+    box-shadow: 0 0 20px #686868;
+    background-color: #00000086;
 }
 
 .especiliadades .especialidades-box:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 20px #686868;
-}
-
-.especiliadades .especialidades-box i {
-    font-size: 70px;
-    color: #fcb045;
+    background-color: #000;
 }
 
 .especiliadades .especialidades-box h3 {
