--- a/Arquivos/style/style.css
+++ b/Arquivos/style/style.css
@@ -166,7 +166,7 @@ header nav.menu-desktop ul li {
 .overlay-menu{
     background-color: #000000df;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -235,13 +235,8 @@ section.topo-do-site{
 }
 
  .img-topo-site {
-    background-image: url(../img/foto\ sem\ fundo.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    width: 65%;
-    height: 75vh;
-    padding: 50px;
+    display: flex;
+    justify-content: end;
     border-bottom: solid 0.5px black;
 }
 
