--- a/Arquivos/style/style.css
+++ b/Arquivos/style/style.css
@@ -196,7 +196,7 @@ section.topo-do-site{
     }
 
     100% {
-        top: 2px;
+        top: 3px;
     }
 }
 
@@ -296,11 +296,7 @@ section.sobre .flex {
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 30px;
-}
-
-.sobre .txt-sobre h2 span {
     color: #fcb045;
-    display: block;
 }
 
 .sobre .txt-sobre p {
@@ -492,6 +488,7 @@ footer .line-footer p a {
 
     section.topo-do-site {
         padding: 20px 8%;
+        text-align: center;
     }
 
     .topo-do-site h1 {
@@ -513,10 +510,37 @@ footer .line-footer p a {
         background-color: red;
     }
 
+    .gif {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        img{
+            width: 90%;
+        }
+    }
+
+    .sobre .flex{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .sobre .txt-sobre{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
     .sobre .txt-sobre h2 {
         font-size: 34px;
         line-height: 35px;
         text-align: center;
+    }
+
+    .sobre .txt-sobre p {
+        width: 95%;
+        margin: 5px 0 15px 0;
     }
     
     .btn-social{
